--- a/index.html
+++ b/index.html
@@ -3,20 +3,58 @@
   <head>
     <meta charset="utf-8">
     <title>wayuufrontend</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="/src/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/src/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/src/css/style.css"> 
   </head>
   <body>
     <div id="app"></div>
+
+    <div class="preloader">
+        <div class="sk-spinner sk-spinner-pulse"></div>
+   </div>
+
+   <!-- Home Section -->
+
+<section id="home" class="main">
+    <div class="overlay"></div>
+ <div class="container">
+   <div class="row">
+
+              <div class="wow fadeInUp col-md-6 col-sm-5 col-xs-10 col-xs-offset-1 col-sm-offset-0" data-wow-delay="0.2s">
+                   <img src="/src/images/home-img.png" class="img-responsive" alt="Home">
+              </div>
+
+              <div class="col-md-6 col-sm-7 col-xs-12">
+                   <div class="home-thumb">
+                        <h1 class="wow fadeInUp" data-wow-delay="0.6s">App Starter Page</h1>
+                        <p class="wow fadeInUp" data-wow-delay="0.8s">The optimal way to present your beautiful mobile app for your startup team. Let us create amazing things!</p>
+                        <a href="#pricing" class="wow fadeInUp section-btn btn btn-success smoothScroll" data-wow-delay="1s">Download App</a>
+                   </div>
+              </div>
+
+   </div>
+ </div>
+</section>
+
+
+
+
+
+
+
+
+
+
+
     <script src="/dist/build.js"></script>
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/magnific-popup-options.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/smoothscroll.js"></script>
-    <script src="js/wow.min.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="/src/js/jquery.js"></script>
+    <script src="/src/js/bootstrap.min.js"></script>
+    <script src="/src/js/jquery.magnific-popup.min.js"></script>
+    <script src="/src/js/magnific-popup-options.js"></script>
+    <script src="/src/js/owl.carousel.min.js"></script>
+    <script src="/src/js/smoothscroll.js"></script>
+    <script src="/src/js/wow.min.js"></script>
+    <script src="/src/js/custom.js"></script>
   </body>
 </html>
