--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>wayuufrontend</title>
+    <title>wayuu app</title>
     <link rel="stylesheet" href="/src/css/bootstrap.min.css">
     <link rel="stylesheet" href="/src/css/font-awesome.min.css">
     <link rel="stylesheet" href="/src/css/style.css"> 
@@ -27,8 +27,8 @@
 
               <div class="col-md-6 col-sm-7 col-xs-12">
                    <div class="home-thumb">
-                        <h1 class="wow fadeInUp" data-wow-delay="0.6s">App Starter Page</h1>
-                        <p class="wow fadeInUp" data-wow-delay="0.8s">The optimal way to present your beautiful mobile app for your startup team. Let us create amazing things!</p>
+                        <h1 class="wow fadeInUp" data-wow-delay="0.6s">Pagina inicial wayuu</h1>
+                        <p class="wow fadeInUp" data-wow-delay="0.8s">La mejor forma de centralizar sus escuelas</p>
                         <a href="#pricing" class="wow fadeInUp section-btn btn btn-success smoothScroll" data-wow-delay="1s">Download App</a>
                    </div>
               </div>
