--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <div id="app"></div>
-   <div id="home"></div>
+    <div id="navigation"></div>
+    <div id="home"></div>
+
 
 
 
