--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="app"></div>
     <div id="navigation"></div>
     <div id="home"></div>
+    <div id="about"></div>
 
 
 
@@ -36,3 +37,4 @@
     <script src="/src/js/custom.js"></script>
   </body>
 </html>
+
