--- a/index.html
+++ b/index.html
@@ -8,23 +8,10 @@
     <link rel="stylesheet" href="/src/css/style.css"> 
   </head>
   <body>
-    <div id="app"></div>
     <div id="navigation"></div>
     <div id="home"></div>
     <div id="about"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <div id="footer"></div>
 
     <script src="/dist/build.js"></script>
     <script src="/src/js/jquery.js"></script>
