--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="home"></div>
     <div id="about"></div>
     <div id="footer"></div>
+    <div id="management"></div>
 
     <script src="/dist/build.js"></script>
     <script src="/src/js/jquery.js"></script>
